Unhandled exception handling

--- a/App.config
+++ b/App.config
@@ -1,3 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="MapyCZforTS_CS.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
+    <userSettings>
+        <MapyCZforTS_CS.Properties.Settings>
+            <setting name="Port" serializeAs="String">
+                <value>5001</value>
+            </setting>
+            <setting name="Cache" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Mapset" serializeAs="String">
+                <value>2</value>
+            </setting>
+            <setting name="UpgradeRequired" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="AdvancedLogging" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </MapyCZforTS_CS.Properties.Settings>
+    </userSettings>
 </configuration>
